--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -15,13 +15,13 @@ permissions:
 
 jobs:
   checks:
-    name: Check Format
+    name: Compile
     runs-on: ubuntu-latest
     steps:
     - name: Dummy build
       run: echo "compiling..."
   publish:
-    if: github.event.release.released
+    #if: github.event.release.released
     name: Publish
     runs-on: ubuntu-latest
     environment: release
@@ -29,4 +29,4 @@ jobs:
       id-token: write
     steps:
       - name: Publish dummy
-        run: echo "publishing..."
+        run: echo "${{ github.event.release }}"
