--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Dummy build
       run: echo "compiling..."
   publish:
-    #if: github.event.release.released
+    if: github.event.release.action == 'released'
     name: Publish
     runs-on: ubuntu-latest
     environment: release
@@ -29,4 +29,4 @@ jobs:
       id-token: write
     steps:
       - name: Publish dummy
-        run: echo "${{ github.event.release }}"
+        run: echo "publishing..."
