--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Dummy build
       run: echo "compiling..."
   publish:
-    if: github.event.release.types == ['released']
+    if: ${{ github.event_name == 'release' && github.event.action == 'released' }}
     name: Publish
     runs-on: ubuntu-latest
     environment: release
