--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Dummy build
       run: echo "compiling..."
   publish:
-    if: ${{ github.event_name == 'release' && github.event.action == 'released' }}
+    # if: ${{ github.event_name == 'release' && github.event.action == 'released' }}
     name: Publish
     runs-on: ubuntu-latest
     environment: release
@@ -29,4 +29,4 @@ jobs:
       id-token: write
     steps:
       - name: Publish dummy
-        run: echo "publishing..."
+        run: echo "{{ github.event_name }}"
