--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -29,4 +29,4 @@ jobs:
       id-token: write
     steps:
       - name: Publish dummy
-        run: echo "{{ github.event_name }}"
+        run: echo "${{ github.event_name }}"
